--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">The Movie DB New</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_login">Login</string>
+    <string name="et_email">Email</string>
+    <string name="et_password">password</string>
+    <string name="tv_signup">Sign Up</string>
+    <string name="tv_logo">Logo</string>
+    <string name="register_failed">Register Failed</string>
+    <string name="register_success">Register Success</string>
+    <string name="email_registered">Email Already Registered</string>
 </resources>
